<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nfc.inovation.tab.me.authenticate.activity.TabMeLoginActivity" >

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:contentDescription="@string/empty"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:id="@+id/appLogoSlogan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:orientation="vertical" >

            <TextView
                style="@style/tabMeHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                style="@style/tabMeSlogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_slogan" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_me_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15sp"
        android:orientation="vertical" >

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/email_sign_in_button"
            style="@style/gradientButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="16sp"
            android:text="@string/action_sign_in"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>