<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/tabMeRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/pannel_tabme_actionbar" />

    <LinearLayout
        android:id="@+id/pageContent"
        style="@style/tabMeContentWrapper"
        android:orientation="vertical" >

        <Button
            style="@style/breadcumBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_utilities_breadcum" />

        <LinearLayout
            style="@style/tabMeContentWrapper"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10sp"
                android:clickable="true"
                android:onClick="goToBizCard"
                android:orientation="horizontal" >

                <ImageView
                    style="@style/tabMeBigMenuImage"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/empty"
                    android:src="@drawable/ic_bizcard" />

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10sp"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        style="@style/tabMeText"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:text="@string/personal_utilities_app_bizcards" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>